# AlfaBank-Scoring

./: .gitignore  .pre-commit-config.yaml  EXPERIMENTS.md  README.md  eda.ipynb  pyproject.toml  subs_analysis.ipynb
src/: config.py  features_creator.py  main_train.py  run_train.py  train.py  train_catboost.py  train_mlp.py  train_sequence_models.py
src/dataset/: __init__.py  sequences.py
src/models/: __init__.py  mlp.py  sequence_models.py
src/utils/: __init__.py  memory.py  pseudo_labels.py
